@@ -147,7 +147,7 @@ public enum DynamicAction {
             case 18 -> CANCELLED_TRIP_NEW;
             case 19 -> STOPS_AFFECTED_NEW;
             default -> {
-                String message = String.format("Unknown dynamic action code: %d", code);
+                String message = "Unknown dynamic action code: %d".formatted(code);
 
                 throw new IllegalArgumentException(message);
             }
