@@ -62,7 +62,7 @@ public enum TransitMode {
             case 3 -> RAIL;
             case 4 -> PEOPLE_MOVER;
             default -> {
-                String message = String.format("Unknown transit mode code: %d", code);
+                String message = "Unknown transit mode code: %d".formatted(code);
 
                 throw new IllegalArgumentException(message);
             }
